adding sliding with animation for screenshots

--- a/birddog.css
+++ b/birddog.css
@@ -1,15 +1,15 @@
 * { margin:0;padding:0; }
-body { background-color:#FFF; font-size:14px; font-family:Verdana, sans-serif; }
-#wrapper { margin:0 auto; width:650px; background-color:#FFF; position:relative; }
+body { background-color:#FFF; font-size:14px; font-family:Verdana, sans-serif; z-index:2; }
+#wrapper { margin:0 auto; width:650px; background-color:#FFF; position:relative; z-index:3; }
 #status_bar { background-color:#222; height:20px; color:#EEE; padding:0px 15px; font-size:10px; font-weight:bold; line-height:20px; text-align:right; }
 #status_bar a { color:#EEE;text-decoration:none; }
 #header { background:#000 url('images/header_bg.png') repeat-x; height:175px; position:relative; }
 #header #dog_head { position:absolute; top:12px; left:0px; }
 #header h1 { font-size:40px; color:#FFF; position:absolute; top:20px; left:325px;  }
 #header h2 { font-size:20px; color:#999; font-weight:normal; position:absolute; top:85px; left:325px; }
-#iphone { position:absolute; top:150px; left:350px; width:250px; }
-#screenshot_window { margin:0; padding:0; position:absolute; top:101px; left:21px; width:211px; height:303px; }
-#screenshot_window img { margin:0; padding:0; width:211px; }
+#iphone { position:absolute; top:150px; left:350px; width:250px; z-index:4; }
+#screenshot_window { margin:0; padding:0; position:absolute; top:101px; left:21px; width:211px; height:303px; z-index:5; overflow:hidden; }
+#screenshot_slider { position:relative; top:0; left:0; margin:0; padding:0; width:844px;z-index:-1; }
 #sub_header { background-color:#999; height:60px; }
 #sub_header h3 { margin:0px; color:#EEE; font-weight:normal; }
 #content { position:relative; top:0; left:25px; min-height:420px; width:45%; }
