--- a/birddog.css
+++ b/birddog.css
@@ -26,12 +26,12 @@ body { background-color:#FFF; font-size:14px; font-family:Verdana, sans-serif; z
 #screenshots img { border:0px; }
 #content #app_store { position:relative; margin:0px; padding-top:5px; height:100px; }
 #content #app_store #soon { position:absolute; top:0; left:25px; }
-#required { clear:both; text-align:center; background-color:#FFC; border:1px solid #EEB; padding-top:4px; font-size:12px; }
+#required { clear:both; text-align:center; background-color:#FFC; border:1px solid #EEB; padding-top:4px; font-size:0.9em; }
 #required a, #footer a { color:#222; }
 #required a:hover, #footer a:hover { text-decoration:none; }
 #footer { height:20px; margin-top:5px; }
-#footer p { padding:1px 10px; font-size:13px; line-height:18px; }
-#thanks { color:#AAA; font-size:11px; }
+#footer p { padding:1px 10px; line-height:18px; }
+#thanks { color:#AAA; font-size:0.8em; }
 #thanks a { color:#AAA; }
 #footer #thanks a:hover { text-decoration:none; color:#666; }
 
